<resources>
    <string name="app_name">SpendSmart</string>
    <string name="welcome_spendsmart_image">SpendSmart Image</string>
    <string name="spendsmart">SpendSmart</string>
    <string name="welcome_contact_us">
        <u>Contact us</u>
    </string>
    <string name="welcome_privacy_policy">
        <u>Privacy Policy</u>
        |
    </string>
    <string name="welcome_terms">
        <u>Terms</u>
        |
    </string>
    <string name="welcome_sign_up">Sign up</string>
    <string name="welcome_log_in">Log In</string>
    <string name="button_done">Done</string>
    <string name="button_back">Back</string>
    <string name="text_forgot_your_password">
        <u>Forgot your Password?</u>
    </string>
    <string name="text_term_condition">
        <u>By singing up, you accept the Spendsmart Terms of Services.</u>
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email</string>
    <string name="fullname">Full Name</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_info">Enter your email address and we\'ll send you a link to reset your password
    </string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_bill">Add Bill</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="tap_to_begin">Tap Anywhere to begin.</string>
    <string name="pay_back">Pay your friends back anytime</string>
    <string name="settle_up">Settle Up</string>
    <string name="contact_us_info">Please enter your details and We will get back to you.</string>
    <string name="contact_us_subject">Subject</string>
    <string name="contact_us_feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_successfully_message">Feedback Submitted Successfully</string>
    <string name="something_went_wrong">Something went wrong !!!</string>
    <string name="welcome_policy">Spendsmart Privacy Policy</string>
    <string name="terms_url">https://webpages.scu.edu/ftp/dpujara/terms.html</string>
    <string name="policy_url">https://www.freeprivacypolicy.com/privacy/view/4b789b77ecc40203195eb05f9f4fd858</string>
    <string name="loading_dialog">Loading .....</string>
    <string name="next_button_slide4">Next</string>
    <string name="logout_menu">Logout</string>
    <string name="home_menu">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter">Filter</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="display_picture">Display Picture</string>
    <string name="settled_up">Settled Up</string>
    <string name="enter">Enter</string>
    <string name="personal_expense">Personal Expense</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>

    <string name="country_prompt">Choose expense type</string>
    <string name="total_expense">Total Expense:</string>
    <string name="total_income">Total Income:</string>
    <string name="select_date">Select Date</string>
    <string name="msg_token_fmt">Message Token Fragment</string>
    <string name="msg_subscribed">msg_subscribed</string>
    <string name="msg_subscribe_failed">msg_subscribe_failed</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="create_group">Create a Group</string>
    <string name="save">Save</string>
    <string name="enter_a_group_name">Enter a group name</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="others">Others</string>
    <string name="trip">Trip</string>
    <string name="group_members">Group Members</string>
    <string name="add_people_to_group">Add People to group</string>
    <string name="add_person_to_group">Add person to group</string>
    <string name="group_user_image">Group user image</string>
    <string name="friendlist">Friendlist</string>
    <string-array name="expense_array">
        <item>Expense</item>
        <item>Income</item>
    </string-array>

</resources>
