<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context="com.pujara.dhaval.spendsmart.welcome.fragments.LoginFragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/_24sdp"
            android:paddingTop="@dimen/_16sdp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_24sdp"
                android:text="@string/spendsmart"
                android:textAppearance="@style/TextAppearance.Spend.Title" />

        <android.support.design.widget.TextInputLayout
                style="@style/Widget.Spend.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/edittext_username_login"
                    android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.Spend.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_12sdp"
                    android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forgot_your_password"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/_8sdp"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                    android:id="@+id/done_button_login"
                    style="@style/Widget.Spend.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/button_done"/>

            <android.support.design.button.MaterialButton
                    android:id="@+id/back_button_login"
                    style="@style/Widget.Spend.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@id/done_button_login"
                    android:text="@string/button_back"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>