<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        tools:context="com.pujara.dhaval.spendsmart.welcome.fragments.LoginFragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/_18sdp"
            android:paddingTop="@dimen/_12sdp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_24sdp"
                android:text="@string/spendsmart"
                android:textAppearance="@style/TextAppearance.Spend.Title" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:baselineAligned="false"
                android:layout_marginBottom="@dimen/_8sdp">

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Spend.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_edittext_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorPrimaryDark"
                        android:inputType="text"
                        android:drawablePadding="@dimen/_24sdp"
                        android:textSize="@dimen/_12sdp"
                        android:importantForAutofill="no"
                        android:maxLines="1"
                        tools:ignore="UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Spend.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_edittext_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_24sdp"
                        android:drawableTint="@color/colorPrimaryDark"
                        android:inputType="textNoSuggestions"
                        android:textSize="@dimen/_12sdp"
                        android:importantForAutofill="no"
                        android:maxLines="1"
                        tools:ignore="UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Spend.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:hint="@string/password">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorPrimaryDark"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_12sdp"
                        android:maxLines="1"
                        tools:ignore="UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp">

            <android.support.design.button.MaterialButton
                    android:id="@+id/done_button_signup"
                    style="@style/Widget.Spend.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/button_done"/>

            <android.support.design.button.MaterialButton
                    android:id="@+id/back_button_signup"
                    style="@style/Widget.Spend.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@id/done_button_signup"
                    android:text="@string/button_back"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
            <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_term_condition"
                    android:textSize="@dimen/_8sdp"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>