<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            style="@style/Widget.Spend.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_group_name"
            android:id="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                android:importantForAutofill="no"
                android:id="@+id/edittext_descr_fullscreen_dialog_personal"
                android:maxLines="1" tools:targetApi="o"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:text="@string/apartment"
            android:paddingStart="@dimen/_16sdp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:paddingEnd="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView6" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/house"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:background="@color/colorSecondaryDark"
            android:textColor="@color/white"
            android:padding="@dimen/_8sdp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/trip"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:background="@color/colorSecondaryDark"
            android:textColor="@color/white"
            android:padding="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView6"/>
    <TextView
            android:text="@string/others"
            android:paddingStart="@dimen/_16sdp"
            android:gravity="center"
            android:paddingEnd="@dimen/_16sdp"
            android:background="@color/colorSecondaryDark"
            android:textColor="@color/white"
            android:padding="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/textView4"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="@dimen/_16sdp"
                  android:background="@color/colorPrimary"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:id="@+id/linearLayout">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  android:layout_marginStart="@dimen/_16sdp"
                  android:padding="@dimen/_2sdp"
                  android:text="@string/group_members"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:padding="@dimen/_8sdp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:id="@+id/add_group_linear_layout"
            android:focusable="true"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/_12sdp"
                  android:layout_marginStart="@dimen/_16sdp"
                  android:textColor="@color/text_color_dark"
                  android:text="@string/add_person_to_group"/>
    </LinearLayout>

    <!--<ListView android:layout_width="match_parent"-->
              <!--android:id="@+id/listView1"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:layout_marginTop="8dp"-->
              <!--app:layout_constraintTop_toBottomOf="@+id/add_group_linear_layout"-->
              <!--app:layout_constraintStart_toStartOf="parent"-->
              <!--app:layout_constraintEnd_toEndOf="parent">-->
    <!--</ListView>-->
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  android:background="@color/colorPrimary"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:id="@+id/linearLayoutFriendList"
                  app:layout_constraintTop_toBottomOf="@+id/add_group_linear_layout">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  android:layout_marginStart="@dimen/_16sdp"
                  android:padding="@dimen/_2sdp"
                  android:text="@string/friendlist"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_friend_list_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutFriendList" android:layout_marginTop="8dp">
    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>