<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pujara.dhaval.spendsmart.welcome.fragments.ContactUsFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <android.support.v7.widget.Toolbar
            app:elevation="@dimen/_8sdp"
            style="@style/Widget.Spend.Toolbar"
            android:id="@+id/app_bar_contact"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:titleTextColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_action_back"
            app:title="Help" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact_us_scrollview"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_marginTop="?android:attr/actionBarSize">
        <LinearLayout
                android:id="@+id/forgot_password_rootContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_24sdp"
                android:paddingTop="@dimen/_16sdp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/welcome_contact_us"
                    android:textAppearance="@style/TextAppearance.Spend.Title2" />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/contact_us_info"
                    android:textAppearance="@style/TextAppearance.Spend.Title3" />

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Spend.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/_12sdp"
                        android:id="@+id/edittext_username_contact_us"
                        android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Spend.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_us_subject">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/_12sdp"
                        android:id="@+id/edittext_subject_contact_us"
                        android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Spend.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:errorEnabled="true"
                    android:hint="@string/contact_us_feedback">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:maxLength="200"
                        android:inputType="textMultiLine"
                        android:textSize="@dimen/_12sdp"
                        android:minLines="3"
                        android:maxLines="3"
                        android:id="@+id/edittext_subject_feedback"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.button.MaterialButton
                        android:id="@+id/reset_password_button_login"
                        style="@style/Widget.Spend.Button"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_feedback"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>